...
          {!isIdentified ? (
            <Button testID="identify-button" title="Identify" onPress={handleIdentify} />
          ) : (
            <Button testID="reset-button" title="Reset" onPress={handleReset} />
          )}
          <Button
            testID="navigation-test-button"
            title="Navigation Test"
            onPress={() => {
              setShowNavigationTest(true)
            }}
          />
          <Button
...
            title="Live Updates Test"
            onPress={() => {
              setShowLiveUpdatesTest(true)
            }}
          />
        </View>
        <OptimizationScrollProvider testID="main-scroll-view">
          {entries.map((entry) =>
            entry.sys.contentType.sys.id === 'nestedContent' ? (
              <NestedContentEntry key={entry.sys.id} entry={entry} />
            ) : (
              <ContentEntry key={entry.sys.id} entry={entry} sdk={sdk} />
            ),
...
