...
    }
  }, [contentfulOptimization])

  return (
    <View style={{ flex: 1 }}>
      <View>
        <Button testID="close-navigation-test-button" title="Close" onPress={onClose} />
      </View>
      <NavigationContainerTracking>
        {(navigationProps) => (
          <NavigationIndependentTree>
            <NavigationContainer
              ref={navigationRef}
...
